# fly-conda-test-feedstock

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  environment.yml  environment_win.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  build.yml
fly_conda_test/: __init__.py  calculator.py
recipe/: build.sh  build_gmx.sh  conda_build_config.yaml  meta.yaml
src/: lib.rs
