[package]
name = "fly_conda_test"
version = "0.11.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fly_rust_lib"
crate-type = ["cdylib"]

# pyo3 = "0.21.1"
[dependencies]
pyo3 = { version = "0.21.1", features = ["extension-module"] }
