[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "fly_conda_test"
version = "0.11.1"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "Dilwar Hossain Noor", email = "php.chandan@gmail.com"},
]
maintainers = [
  {name = "Dilwar Hossain Noor", email = "php.chandan@gmail.com"}
]
packages = ["fly_conda_test"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "fly_rust_lib"
